--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   },
   "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
-    "jsx-loader": "^0.12.2",
+    "babel-core": "^4.7.3",
+    "babel-loader": "^4.1.0",
+    "object-assign": "^2.0.0",
+    "react": "^0.12.2",
     "react-hot-loader": "^1.1.1",
-    "webpack": "^1.7.0",
+    "webpack": "^1.7.2",
     "webpack-dev-server": "1.6.4"
-  },
-  "dependencies": {
-    "react": "^0.12.0"
   }
 }
